# nzb-dispatch

./: Cargo.toml
src/: dispatch_engine.rs  download_engine.rs  lib.rs  news_engine.rs
src/news/: article.rs  dispatch.rs  downloader.rs  mod.rs  news_wrapper.rs  penalty.rs  server.rs  trylist.rs
tests/: news_downloader_integration.rs  news_engine_integration.rs
