[package]
name = "nzb-dispatch"
version = "0.2.0"
edition = "2024"
description = "Article-level dispatcher: per-server worker pool, priority gating, retry + hopeless tracking. Part of the nzb-* layered usenet engine."
license = "MIT"
repository = "http://100.92.54.45:3002/indexarr/nzb-dispatch"

[dependencies]
nzb-nntp = { version = "0.2.17", registry = "forgejo" }
nzb-decode = { version = "0.1.2", registry = "forgejo" }
nzb-core = { version = "0.2.9", registry = "forgejo" }
nzb-news = { version = "0.1.6", registry = "forgejo" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
arc-swap = "1"
governor = "0.10"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
nzb-nntp = { version = "0.2.17", registry = "forgejo", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serial_test = "3"
yenc-simd = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"


