[package]
name = "nzb-dispatch"
version = "0.2.4"
edition = "2024"
description = "Article-level dispatcher: per-server worker pool, priority gating, retry + hopeless tracking. Part of the nzb-* layered usenet engine."
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-dispatch"
readme = "README.md"

[dependencies]
nzb-nntp = { version = "0.2.17" }
nzb-decode = { version = "0.1.2" }
nzb-core = { version = "0.2.9" }
nzb-news = { version = "0.1.9" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
arc-swap = "1"
governor = "0.10"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
nzb-nntp = { version = "0.2.17", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serial_test = "3"
yenc-simd = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"


